--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/steak.html">How to make a steak</a>
+    <a href="recipes/steak.html">How To Make A Flat Iron Steak</a>
     
   </body>
 </html>
