--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -5,9 +5,32 @@
     <title>Odin Recipes</title>
   </head>
 
-  <body>
+ <body>
     <h1>How to make a steak</h1>
+   
     <img src="../img/Steak.jpg" alt="Cooked steak medium rare">
-    <h3>Description</h3>
-  </body>
+   
+    <h2>Description</h2>
+    <p>Flat iron steak is cut from beef shoulder. To make a flat iron steak, butchers remove the connective tissue to separate the top shoulder blade into two cuts: One is the top blade, the other is the flat iron.</p>
+    <p>Flat iron steak is nicely marbled and is less expensive than other steaks, which makes it a popular choice among home cooks. When it's cooked correctly, flat iron steak is wonderfully tender and juicy.</p>
+    
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 (2 pound) flat iron steak</li>
+        <li>2 ½ tablespoons olive oil</li>
+        <li>2 cloves garlic, minced</li>
+        <li>1 teaspoon chopped fresh parsley</li>
+        <li>¼ teaspoon chopped fresh rosemary</li>
+        <li>½ teaspoon chopped fresh chives</li>
+        <li>½ teaspoon salt</li>
+        <li>¾ teaspoon ground black pepper</li>
+        <li>¼ teaspoon dry mustard powder</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Place the steak inside of a large resealable bag. In a small bowl, stir together the olive oil, garlic, parsley, rosemary, chives, red wine, salt, pepper and mustard powder. Pour over the steak in the bag. Press out as much air as you can and seal the bag. Marinate in the refrigerator for 2 to 3 hours.</li>
+        <li>Heat a nonstick skillet over medium-high heat. Sear and cook the steak in the hot skillet for 3 to 4 minutes on each side for medium rare, or to your desired degree of doneness. Discard the marinade. Allow the steaks to rest for about 5 minutes before serving.</li>
+    </ol>
+ </body>
 </html>
