../img/grilledcheese.jpg

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/steak.html">How To Make A Flat Iron Steak</a>
+    <ul>
+        <li><a href="recipes/steak.html">How To Make A Flat Iron Steak</a></li>
+        <li><a href="recipes/grilled-cheese.html">How To Make A Grilled Cheese</li>
+        <li><a href="recipes/tilapia.html">How To Make A Pan-Seared Tilapia</a></li>
+    </ul>
+    
     
   </body>
 </html>
