--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Odin Recipes</title>
+    <title>Steak</title>
   </head>
 
  <body>
-    <h1>How to make a steak</h1>
+    <h1>How to make a flat iron steak</h1>
    
     <img src="../img/Steak.jpg" alt="Cooked steak medium rare">
    
@@ -29,8 +29,15 @@
 
     <h2>Steps</h2>
     <ol>
-        <li>Place the steak inside of a large resealable bag. In a small bowl, stir together the olive oil, garlic, parsley, rosemary, chives, red wine, salt, pepper and mustard powder. Pour over the steak in the bag. Press out as much air as you can and seal the bag. Marinate in the refrigerator for 2 to 3 hours.</li>
-        <li>Heat a nonstick skillet over medium-high heat. Sear and cook the steak in the hot skillet for 3 to 4 minutes on each side for medium rare, or to your desired degree of doneness. Discard the marinade. Allow the steaks to rest for about 5 minutes before serving.</li>
+        <li>Place the steak inside of a large resealable bag.</li> 
+        <li>In a small bowl, stir together the olive oil, garlic, parsley, rosemary, chives, salt, pepper and mustard powder.</li>
+        <li>Pour over the steak in the bag.</li>
+        <li>Press out as much air as you can and seal the bag.</li> 
+        <li>Marinate in the refrigerator for 2 to 3 hours.</li>
+        <li>Heat a nonstick skillet over medium-high heat.</li>
+        <li>Sear and cook the steak in the hot skillet for 3 to 4 minutes on each side for medium rare, or to your desired degree of doneness.</li>
+        <li>Discard the marinade.</li> 
+        <li>Allow the steaks to rest for about 5 minutes before serving.</li>
     </ol>
  </body>
 </html>
